--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "hbs": "^4.2.0",
-    "mongoose": "^6.6.3",
-    "morgan": "^1.10.0",
-    "serve-favicon": "^2.5.0"
+    "mongoose": "^6.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
